--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="108" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="108" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="opYbF4e8y538YKqq5EFCrgx4PQuhScdGcG1qcs2EUnIsUv8e9VyVCWVLSLMedcpkDQ53MYnsaNUwh5aJ5PSOExpuUFjxbu4EzWH92TSML1A93v6BE7e5xl4ctw2U1Nws" data-form-email="true">
+                                <input type="hidden" value="ep5taDyIKsGwVnkCbt99twWIB0gy0oAmDon2OBuxBBktXcMi/79aalssfoOp0+9dOP8SR+VCxR+0if3NeOLGT7Iw2nX7zdbTChTAmTnU5E37U++Cov7uaPFWaZhYK42L" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
