--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -498,12 +498,12 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2v" data-rv-view="43" style="background-color: rgb(65, 168, 95); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section article mbr-section__container" id="content1-2v" data-rv-view="43" style="background-color: rgb(36, 130, 63); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>​Always check the URL and verify the contribution address before sending ETH.</p><p><span style="font-size: 1.07rem;">​​</span></p><div>We only accept ETH</div><div>
-</div><div>Minimum Contribution &nbsp;0.1 ETH</div><div>Maximum Contribution 20 ETH</div><div><br></div><div>◎ Please use <strong><em>IMToken Wallet</em></strong>, <strong><em>TRUST Wallet</em></strong> or <strong><em>MyEtherWallet</em></strong> to receive your token</div><div>◎ Due to unpredictable transaction traffic, please allow 24 hours for the token to be delivered to you ERC20 Wallet</div><div><br></div><div><strong>Important:</strong> <em><strong>Please only use IMToken or Trust or Myetherwallet to send you contribution and to receive your GTMR Token</strong></em></div><div>Make sure that you send Ether from wallet that supports ERC20 tokens or from an address for which you control the private key. Otherwise you will not be able interact with the GTMR tokens received. Do not send ETH directly from an exchange to the contribution address.</div><p></p></div>
+</div><div>Minimum Contribution &nbsp;0.1 ETH</div><div>Maximum Contribution 20 ETH</div><div><br></div><div>◎ Please use <strong><em>IMToken Wallet</em></strong>, <strong><em>TRUST Wallet</em></strong> or <strong><em>MyEtherWallet</em></strong> to receive your token</div><div>◎ Due to unpredictable transaction traffic, please allow 24 hours for the token to be delivered to you ERC20 Wallet</div><div><br></div><div><strong>Important:</strong> <em><strong>Please only use <a href="https://play.google.com/store/apps/details?id=org.consenlabs.token&hl=en" class="text-warning">IMToken</a> or <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp&hl=en" class="text-warning">Trust </a>or <a href="https://www.myetherwallet.com/" class="text-warning">Myetherwallet</a> to send you contribution and to receive your GTMR Token</strong></em></div><div>Make sure that you send Ether from wallet that supports ERC20 tokens or from an address for which you control the private key. Otherwise you will not be able interact with the GTMR tokens received. Do not send ETH directly from an exchange to the contribution address.</div><p></p></div>
         </div>
     </div>
 
